# micropipenv

./: .aicoe-ci.yaml  .coafile  .gitignore  .pre-commit-config.yaml  .prow.yaml  .thoth.yaml  .travis.yml  .zuul.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  OWNERS  Pipfile  README.md  README.rst  app.py  micropipenv.py  mypy.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: major-release.md  minor-release.md  patch-release.md
.github/workflows/: main.yml  prep_windows_matrix.py  update_pip.yml  update_supported_pip.sh  windows.yml
.tekton/: repository.yaml  tox-on-pr.yaml
.tekton/tasks/: tox.yaml
template/: version.py
tests/: conftest.py  generate_test_data.sh  test_micropipenv.py
tests/data/check/pipenv/: Pipfile
tests/data/install/: poetry_markers_extra
tests/data/install/error_hash/: Pipfile
tests/data/install/error_python/: Pipfile
tests/data/install/invalid_pipfile/: Pipfile
tests/data/install/invalid_pyproject_toml/: pyproject.toml
tests/data/install/pip-tools/: requirements.txt
tests/data/install/pipenv_editable/: setup  setup.py
tests/data/install/pipenv_env_vars/: Pipfile
tests/data/install/pipenv_env_vars_default/: Pipfile
tests/data/install/pipenv_error_hash/: Pipfile
tests/data/install/pipenv_url/: Pipfile
tests/data/install/poetry_complex_dep_tree/: pyproject.toml
tests/data/install/poetry_directory/: pyproject.toml
tests/data/install/poetry_directory/testproject/: pyproject.toml  setup.cfg  testproject.py
tests/data/install/poetry_directory_poetry/testproject/: pyproject.toml
tests/data/install/poetry_secondary_source/: pyproject.toml
tests/data/install/poetry_url/: pyproject.toml
tests/data/install/poetry_vcs/: pyproject.toml
tests/data/install/poetry_vcs_subdir/: pyproject.toml
tests/data/install/requirements/: requirements.txt
tests/data/install/requirements_editable/: requirements.txt  setup  setup.py
tests/data/install/requirements_editable_unlocked/: main  requirements.txt  setup
tests/data/install/requirements_svn/: requirements.txt
tests/data/install/requirements_vcs/: requirements.txt
tests/data/parse/pip-tools/: requirements.txt
tests/data/parse/pip-tools_no_index/: requirements.txt
tests/data/parse/pipenv/: Pipfile
tests/data/parse/poetry/: pyproject.toml
tests/data/parse/poetry_1_5/: pyproject.toml
tests/data/parse/poetry_default_dev_diff/: pyproject.toml
tests/data/parse/poetry_default_source_legacy/: pyproject.toml
tests/data/parse/poetry_endless_loop/: pyproject.toml
tests/data/parse/poetry_invalid_category/: pyproject.toml
tests/data/parse/poetry_legacy_source_and_groups/: pyproject.toml
tests/data/parse/poetry_markers_direct/: pyproject.toml
tests/data/parse/poetry_markers_extra/: pyproject.toml
tests/data/parse/poetry_markers_indirect/: pyproject.toml
tests/data/parse/poetry_markers_order/: pyproject.toml
tests/data/parse/poetry_markers_skip/: pyproject.toml
tests/data/parse/poetry_markers_transitive_deps/: pyproject.toml
tests/data/parse/poetry_normalized_names/: pyproject.toml
tests/data/parse/poetry_secondary_source/: pyproject.toml
tests/data/parse/poetry_source_directory/: pyproject.toml
tests/data/parse/poetry_source_without_url/: pyproject.toml
tests/data/parse/requirements/: requirements.txt
tests/data/requirements/default/: Pipfile  requirements_no_comments.txt  requirements_no_default.txt  requirements_no_dev.txt  requirements_no_hashes.txt  requirements_no_indexes.txt  requirements_no_versions.txt  requirements_only_direct.txt
tests/data/requirements/dev/: requirements_no_comments.txt  requirements_no_default.txt  requirements_no_dev.txt  requirements_no_hashes.txt  requirements_no_indexes.txt  requirements_no_versions.txt  requirements_only_direct.txt
tests/data/requirements/extras/: Pipfile  requirements_no_comments.txt  requirements_no_default.txt  requirements_no_indexes.txt
tests/data/requirements/extras_marker/: Pipfile  requirements_no_dev.txt  requirements_no_hashes.txt  requirements_no_indexes.txt  requirements_no_versions.txt  requirements_only_direct.txt
tests/data/requirements/marker/: Pipfile  requirements_no_comments.txt  requirements_no_default.txt  requirements_no_dev.txt  requirements_no_hashes.txt  requirements_no_indexes.txt  requirements_no_versions.txt  requirements_only_direct.txt
tests/data/requirements/poetry_complex/: pyproject.toml  requirements_no_comments.txt  requirements_no_default.txt  requirements_no_dev.txt  requirements_no_hashes.txt  requirements_no_indexes.txt  requirements_no_versions.txt  requirements_only_direct.txt
tests/data/requirements/source/: Pipfile  requirements_no_comments.txt  requirements_no_default.txt  requirements_no_dev.txt  requirements_no_hashes.txt  requirements_no_indexes.txt  requirements_no_versions.txt  requirements_only_direct.txt
tests/data/requirements/vcs_ref_editable/: Pipfile  requirements_no_comments.txt  requirements_no_dev.txt  requirements_no_hashes.txt  requirements_no_indexes.txt  requirements_no_versions.txt  requirements_only_direct.txt
tests/data/verify/pipenv_error_hash/: Pipfile
tests/data/verify/pipenv_error_python/: Pipfile
tests/data/verify/poetry_error_hash/: pyproject.toml
tests/data/verify/poetry_group/: pyproject.toml
tests/data/verify/poetry_project/: pyproject.toml
