[metadata]
name = micropipenv
version = attr: micropipenv.__version__
description = A simple wrapper around pip to support requirements.txt, Pipenv and Poetry files for containerized applications
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/thoth-station/micropipenv
download_url = https://pypi.org/project/micropipenv
keywords = packaging, pipenv, poetry, pip, dependencies, dependency-management, utilities
license = LGPLv3+
author = Fridolin Pokorny
author_email = fridex.devel@gmail.com
maintainer = Fridolin Pokorny
maintainer_email = fridex.devel@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython


[options]
py_modules =
    micropipenv
install_requires =
    pip>=9

[options.entry_points]
console_scripts =
    micropipenv = micropipenv:main

[options.extras_require]
toml =
    toml;python_version<"3.11"
tests =
    flexmock
    pytest
    pytest-timeout
    pytest-venv>=0.3
    packaging
