[tool.poetry]
name = "ngfw-edl-server"
version = "0.1.0.dev"
description = "External Dynamic List server for Next-Generation Firewalls"
authors = ["Sam Morris <sam@robots.org.uk>"]
classifiers = [
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.11"
dnspython = "^2.6.1"
quart = "^0.19.5"
gunicorn = {version = "^22.0.0", optional = true}
uvicorn = {version = "^0.29.0", optional = true}
setproctitle = {version = "^1.3.3", optional = true}
aioprometheus = {extras = ["quart"], version = "^23.12.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
python-dotenv = "^1.0.1"
pylist = "^1.4.0"
pytest = "^8.2.0"
pytest-httpserver = "^1.0.10"
pytest-cov = "^5.0.0"
pip-audit = "^2.7.3"
pylint = "^3.1.0"
logging-tree = "^1.10"
trustme = "^1.1.0"

[tool.poetry.extras]
# This bit is maintained by hand
production = ["gunicorn", "setproctitle", "uvicorn"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
packages = "ngfw_edl_server"

[[tool.mypy.overrides]]
module = "logging_tree"
ignore_missing_imports = true

[tool.pylint.'MESSAGES CONTROL']
jobs = 0
reports = false
score = false
py-version = 3.11
disable= "line-too-long, missing-function-docstring, missing-class-docstring, missing-module-docstring, invalid-name"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "-m", "not container",
]
markers = [
    "container: include tests in container rest suite"
]
testpaths = ["tests"]

[tool.bandit]
targets = ["src"]

[tool.ruff]
target-version = "py311"

[tool.pytest.run]
source_pkgs = ["ngfw_edl_server"]
