[tool.poetry]
name = "test-micropipenv"
version = "0.1.0"
description = ""
authors = ["Fridolin Pokorny <fridolin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
micropipenv = {version = "0.0.1", optional = true}
selinon = {version = "1.0.0", extras = ["s3", "postgres"]}
daiquiri = {git = "https://github.com/jd/daiquiri", rev = "2.1.0"}

[tool.poetry.dev-dependencies]
hexsticker = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
