[tool.poetry]
name = "test"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "2.8.1"

[tool.poetry.dev-dependencies]
freezegun = "1.1.0"
python-dateutil = "2.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
