[project]
name = "micropipenv-test"
version = "0.1.0"
description = ""
authors = [
    { name = "Fridolin Pokorny", "email" = "fridolin@redhat.com" }
]
dynamic = [ "dependencies" ]
requires-python = "^3.7"

[tool.poetry.dependencies]
python = "^3.7"
daiquiri = "2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
