[tool.poetry]
name = "testproject"
version = "0.1.0"
description = ""
authors = ["Dummy Author <dummy@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-json-logger = "0.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
